# drakon-renderer

./: .coderabbit.yml  .gitignore  Alex  CHANGELOG.md  DrakonRenderer.sln  HelloWorld.hs  HelloWorld.lhs  LICENSE  README.md  build.sh  demo-run.sh  dev-log.md  dockerfile  drakon-renderer.cabal  drakon-renderer.sln  format.sh  host.sh  run.sh  setup-cabal.sh  start-development-environment.ps1  start-development-environment.sh  start.sh  terms.md
.devcontainer/: devcontainer.json
.github/workflows/: haskell-ci-experimental.yml  haskell.yml
CSRenderer/: CSRenderer.csproj  Program.cs
app/: DataTypes.hs  Icon.hs  LayoutEngine.hs  Main.hs  Main_NewRendering.hs  Main_NewTypes.hs  Parser.hs  ParserV2.hs  Records.hs  Renderer.hs
app/Drakon/: ConnectedSkewerBlocks.hs  Constants.hs  Content.hs  DrakonDiagram.hs  EndTerminator.hs  HelperDiagrams.hs  ID.hs  Lexer.hs  Lexer.info  Lexer.x  NewSkewerBlock.hs  Parser.hs  Parser.info  Parser.y  PositionedNewSkewerBlock.hs  SkewerBlock.hs  StartTerminator.hs  TypeClasses.hs  ValentPoint.hs  input.txt
diagrams/: drakon-diagram-1-drakon-layout.json  drakon-diagram-1.json  drakon-diagram-2-drakon-layout.json  drakon-diagram-2-unsorted.json  drakon-diagram-2.json  drakon-diagram-3-layout.json  drakon-diagram-3.json  drakon-diagram-4-layout.json  drakon-diagram-4.json  drakon-diagram-balanced-paths.md  drakon-diagram-layout.json  drakon-diagram.json  notes.json  notes.txt  primitive-diagram-1-balanced-paths.md  primitive-diagram-1-layout.json  primitive-diagram-1.json  primitive-diagram-1.txt  primitive-diagram-2.txt  primitive-diagram-3.txt  real-life-diagram-1-balanced-paths.md  real-life-diagram-1-layout.json  real-life-diagram-1.json  silhouette-diagram-1.txt  simple-diagram-2-balanced-paths.md  simple-diagram-2-layout.json  simple-diagram-2.json  simple-diagram-3-balanced-paths.md  simple-diagram-3-layout.json  simple-diagram-balanced-paths.md  simple-diagram-layout.json  simple-diagram.json
diagrams/primitive-diagram-1/: primitive-diagram-1-balanced-paths.md  primitive-diagram-1-layout.json
diagrams/primitive-diagram-2/: primitive-diagram-2-layout.json
diagrams/primitive-diagram-4/: primitive-diagram-4.json
diagrams/primitive-diagram-5/: primitive-diagram-5-balanced-paths.md  primitive-diagram-5-layout.json  primitive-diagram-5.json
diagrams/primitive-diagram-6/: primitive-diagram-6-balanced-paths.md  primitive-diagram-6-layout.json  primitive-diagram-6.json
diagrams/simple-diagram-1/: simple-diagram-1-balanced-paths.md
diagrams/simple-diagram-2/: simple-diagram-2-layout.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
webapi/: Program.cs
webapi/Properties/: launchSettings.json
