cabal-version:      3.8
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.

name:               drakon-renderer

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.2.0.0

synopsis:           drakon diagrams renderer

description:        string -> svg drakon diagrams renderer

homepage:           https://github.com/PiotrJustyna/drakon-renderer

license:            MIT

license-file:       LICENSE

author:             Piotr Justyna

maintainer:         piotr.justyna@gmail.com

category:           Development

build-type:         Simple

extra-doc-files:    readme.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options:        -Wall

executable drakon-renderer
    import:             warnings

    main-is:            Main.hs

    other-modules:      Drakon.Constants
                        Drakon.Content
                        Drakon.DrakonDiagram
                        Drakon.EndTerminator
                        Drakon.HelperDiagrams
                        Drakon.ID
                        Drakon.SkewerBlock
                        Drakon.StartTerminator
                        Drakon.TypeClasses
                        Drakon.ValentPoint

    default-extensions: LambdaCase

    build-depends:      base ^>= 4.19.1.0,
                        colour,
                        containers,
                        diagrams-lib,
                        diagrams-svg,
                        text,

    hs-source-dirs:     app

    default-language:   Haskell2010
